<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motoli Swahili</string>
    <string name="strNone"/>
    <string name="none"/>
    <string name="smallRandomString">lego</string>
    <string name="mediumRandomString">grassy</string>
    <string name="largeRandomString">alligator</string>
    <string name="strRandomLetter">lj</string>
    <string name="strNewUser">New User</string>
    <string name="strGuestUser">Guest</string>
    <string name="activity_icon">Activity Icon</string>
    <string name="strLeaveApp">You are about to leave the app</string>
    <string name="loadingCapital">LOADING</string>
    <string name="strWouldYouLieToLeave">Would You Like To Leave?</string>

    <string name="strYes">Yes</string>

    <string name="strNo">No</string>
    <string name="submit_admin_password">Submit Password</string>
    <string name="admin_password_incorrect">Password Incorrect</string>

    <string name="loading">loading</string>
    <string name="general_image">general imge</string>
    <string name="stringMultiplication">\u00D7</string>
    <string name="stringEqual">=</string>
    <string name="stringPlus">+</string>
    <string name="stringMinus">–</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="star">star</string>
    <string name="ninetyNine">99</string>
    <string name="hundred">100</string>

    <string name="coming_soon">password: xprize</string>

    <string name="submit">submit</string>

    <string name="admin_password_below">Enter Password Below:</string>

    <string name="admin_password_is_incorrect">Password Is Incorrect</string>


    <string name="letter_1">a</string>
    <string name="letter_2">b</string>
    <string name="letter_3">c</string>
    <string name="letter_4">d</string>
    <string name="letter_5">e</string>
    <string name="letter_6">f</string>
    <string name="letter_7">g</string>
    <string name="letter_8">h</string>
    <string name="letter_9">i</string>
    <string name="letter_10">j</string>
    <string name="letter_11">k</string>
    <string name="letter_12">l</string>
    <string name="letter_13">m</string>
    <string name="letter_14">n</string>
    <string name="letter_15">o</string>
    <string name="letter_16">p</string>
    <string name="letter_17">q</string>
    <string name="letter_18">r</string>
    <string name="letter_19">s</string>
    <string name="letter_20">t</string>
    <string name="letter_21">u</string>
    <string name="letter_22">v</string>
    <string name="letter_23">w</string>
    <string name="letter_24">x</string>
    <string name="letter_25">y</string>
    <string name="letter_26">z</string>


    <string name="phonic_1">a</string>
    <string name="phonic_2">b</string>
    <string name="phonic_3">c</string>
    <string name="phonic_4">d</string>
    <string name="phonic_5">e</string>
    <string name="phonic_6">f</string>
    <string name="phonic_7">g</string>
    <string name="phonic_8">h</string>
    <string name="phonic_9">i</string>
    <string name="phonic_10">j</string>
    <string name="phonic_11">k</string>
    <string name="phonic_12">l</string>
    <string name="phonic_13">m</string>
    <string name="phonic_14">n</string>
    <string name="phonic_15">o</string>
    <string name="phonic_16">p</string>
    <string name="phonic_17">q</string>
    <string name="phonic_18">r</string>
    <string name="phonic_19">s</string>
    <string name="phonic_20">t</string>
    <string name="phonic_21">u</string>
    <string name="phonic_22">v</string>
    <string name="phonic_23">w</string>
    <string name="phonic_24">x</string>
    <string name="phonic_25">y</string>
    <string name="phonic_26">z</string>

    <string name="reset">reset</string>

    <string name="MathOperations">Math Operations</string>

    <string name="Shapes">Shapes</string>

    <string name="Words">Words</string>

    <string name="Syllables">Syllables</string>

    <string name="SyllablesCount">Syllables Count</string>

    <string name="Phonics">Phonics</string>

    <string name="Uppercase">Uppercase</string>

    <string name="Lowercase">Lowercase</string>

    <string name="SubmitAdminPassword">Submit Password</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="aboutInSettings">About</string>
    <string name="specialEffects">Special Effects</string>
    <string name="email_data">Email Data</string>
    <string name="contact_us">Contact Us</string>
    <string name="Delete"> ⌫ </string>
    <string name="dash">—</string>
    <string name="strRandomWord4Letter">keki</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_brush">Brush</string>
    <string name="action_color">Color</string>
    <string name="action_save">Save</string>
    <string name="update_online">Update Data to ET4D</string>
    <string name="StudentName">Student Name</string>
    <string name="emailForData">Email For Data</string>
    <string name="emailForDataInfo">Enter an email to send a CSV file consisting of the students progress. In addition an email to ET4D will be in copy. Will send only to ET4D if no email entered.</string>
</resources>
