<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Activity_PhonicSection2"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingTop="16dp" >

    <TableRow
        android:id="@+id/Launch_General"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".44"
        android:clickable="false"
        android:focusable="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".55"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/UserSelectArrow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"
                android:src="@drawable/blank_image"
                android:visibility="visible" />

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-10dp"
            android:layout_weight=".8" >

            <ImageButton
                android:id="@+id/UserSelectIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:contentDescription="@string/strNewUser"
                android:focusable="false"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_act_cs01" />

            <TextView
                android:id="@+id/CurriculumNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/UserSelectIcon"
                android:layout_alignLeft="@+id/UserSelectIcon"
                android:layout_alignRight="@+id/UserSelectIcon"
                android:layout_alignTop="@+id/UserSelectIcon"
                android:contentDescription="@string/strNone"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/strRandomLetter"
                android:textColor="@android:color/transparent"
                android:textSize="48sp" />

        </RelativeLayout>
    </TableRow>

    <TableLayout
        android:id="@+id/CurriculumTextArea"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="false" >

        <TextView
            android:id="@+id/UserSelectText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:clickable="false"
            android:contentDescription="@string/none"
            android:focusable="false"
            android:gravity="center_vertical"
            android:text="@string/strNewUser"
            android:textColor="@color/normalBlack"
            android:textSize="42sp" />
    </TableLayout>

    <ImageView
        android:id="@+id/CurriculumWinner"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".3"
        android:adjustViewBounds="true"
        android:contentDescription="@string/none"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_winner"
        android:visibility="gone" />

</LinearLayout>