<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityMainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/activityMainPart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sd04">

        <LinearLayout
            android:id="@+id/topIcons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="6dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight=".15"
            app:layout_constraintBottom_toTopOf="@+id/iconSpace">

            <include
                layout="@layout/activity_top_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:id="@+id/iconSpace"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/topIcons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_weight="1" />


        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineTopBalloon"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal" />


        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineLeftBalloon"
            app:layout_constraintGuide_percent="0.15"
            android:orientation="vertical" />


        <ImageView
            android:id="@+id/speechBalloon0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/strNone"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_sd04_left"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottomBalloon"
            app:layout_constraintRight_toLeftOf="@+id/guidelineLeftBalloonEnd"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeftBalloon"
            app:layout_constraintTop_toTopOf="@+id/guidelineTopBalloon" />

        <TextView
            android:id="@+id/phonic0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/strRandomLetter"
            android:textColor="@color/veryDarkGray"
            android:textSize="@dimen/sd04_font_size"
            app:layout_constraintTop_toTopOf="@+id/speechBalloon0"
            app:layout_constraintBottom_toBottomOf="@+id/speechBalloon0"
            app:layout_constraintLeft_toLeftOf="@+id/speechBalloon0"
            app:layout_constraintRight_toRightOf="@+id/speechBalloon0"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineLeftBalloonEnd"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="vertical" />


        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineRightBalloon"
            app:layout_constraintGuide_percent="0.6"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/speechBalloon1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/strNone"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_sd04_right"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottomBalloon"
            app:layout_constraintRight_toLeftOf="@+id/guidelineRightBalloonEnd"
            app:layout_constraintLeft_toLeftOf="@+id/guidelineRightBalloon"
            app:layout_constraintTop_toTopOf="@+id/guidelineTopBalloon" />

        <TextView
            android:id="@+id/phonic1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/strRandomLetter"
            android:textColor="@color/veryDarkGray"
            android:textSize="@dimen/sd04_font_size"
            app:layout_constraintTop_toTopOf="@+id/speechBalloon1"
            app:layout_constraintBottom_toBottomOf="@+id/speechBalloon1"
            app:layout_constraintLeft_toLeftOf="@+id/speechBalloon1"
            app:layout_constraintRight_toRightOf="@+id/speechBalloon1"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineRightBalloonEnd"
            app:layout_constraintGuide_percent="0.85"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineBottomBalloon"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal" />



        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineTopImage"
            app:layout_constraintGuide_percent="0.45"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/frame0"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/strNone"
            android:scaleType="fitCenter"
            android:src="@drawable/frm_sd04"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineBottomImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTopImage" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/image0"
            android:src="@drawable/dummy_img_phonic_word"
            android:layout_margin="@dimen/sd04_image_margins"
            android:scaleType="fitCenter"
            android:contentDescription="@string/general_image"
            app:layout_constraintLeft_toLeftOf="@+id/frame0"
            app:layout_constraintRight_toRightOf="@+id/frame0"
            app:layout_constraintTop_toTopOf="@+id/frame0"
            app:layout_constraintBottom_toBottomOf="@+id/frame0"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineBottomImage"
            app:layout_constraintGuide_percent="0.95"
            android:orientation="horizontal" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineTopMicDudes"
            app:layout_constraintGuide_percent="0.45"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/btnMicDude1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/none"
            android:scaleType="fitStart"
            android:src="@drawable/btn_dude_left_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTopMicDudes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias=".02"/>

        <ImageView
            android:id="@+id/btnMicDude2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/none"
            android:src="@drawable/btn_dude_right_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTopMicDudes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias=".98" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnValidate"
            android:src="@drawable/btn_validate_ok"
            android:scaleType="fitStart"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="@dimen/sd04_top_val"
            android:contentDescription="@string/general_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/frame0"
            app:layout_constraintRight_toRightOf="@+id/frame0"
            app:layout_constraintVertical_bias="0.02"/>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>