<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue_sky_snow_white_ground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.23"
            layout="@layout/activity_top_area" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activityMainPart">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".05"/>

            <ImageView
                android:id="@+id/btnMicDude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_dude_turquise_ears"
                android:layout_weight="1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".06"/>

            <ImageView
                android:id="@+id/btnValidate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/strNone"
                android:scaleType="fitStart"
                android:src="@drawable/btn_validate_on_mic"
                android:layout_weight="1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".05"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/activityMainPartSecond">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/frame1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:contentDescription="@string/strNone"
                    android:src="@drawable/frm_wd01_off" />

                <TextView
                    android:id="@+id/word1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:lineSpacingMultiplier=".8"
                    android:linksClickable="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:text="@string/smallRandomString"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/normalBlack"
                    android:textSize="@dimen/wdFirstFontSize" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/frame2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/strNone"
                    android:src="@drawable/frm_wd01_on" />

                <TextView
                    android:id="@+id/word2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:lineSpacingMultiplier=".8"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:text="@string/smallRandomString"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/normalBlack"
                    android:textSize="@dimen/wdFirstFontSize" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/frame3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/strNone"
                    android:src="@drawable/frm_wd01_off" />

                <TextView
                    android:id="@+id/word3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:lineSpacingMultiplier=".8"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:text="@string/smallRandomString"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/normalBlack"
                    android:textSize="@dimen/wdFirstFontSize" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/frame4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/strNone"
                    android:scaleType="centerInside"
                    android:src="@drawable/frm_wd01_on" />

                <TextView
                    android:id="@+id/word4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:lineSpacingMultiplier=".8"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:text="@string/smallRandomString"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/normalBlack"
                    android:textSize="@dimen/wdFirstFontSize" />

            </RelativeLayout>

        </TableRow>

    </LinearLayout>

</FrameLayout>
